--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "homepage": "https://sarahheacock.github.io/economic-data/",
   "version": "0.1.0",
   "private": true,
-
   "dependencies": {
     "axios": "^0.16.1",
     "bootstrap": "^3.3.7",
     "d3": "^4.8.0",
+    "jquery": "^3.2.1",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
     "gh-pages": "^1.0.0",
+    "jquery": "^3.2.1",
     "react-scripts": "0.9.5"
   },
   "scripts": {
